# FogAi

./: .gitignore  .gitmodules  .privatepaths  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  inference_pb2.py  inference_pb2_grpc.py  test_chat.json  test_embedding.json  test_integration.sh  tmp_export.py  verify_fixes.sh
UI/: docker-compose.yml
doc/: api-gateway.md  api-reference.md  architecture.md  inference-interface.md  mnn-engine.md  setup.md
gateway/: .env.example  .gitignore  build.gradle.kts  gateway.pid  nodes.json  verify_concurrency.sh
gateway/gradle/: libs.versions.toml
gateway/src/main/kotlin/com/tactorder/gateway/: GatewayVerticle.kt
gateway/src/main/kotlin/com/tactorder/gateway/api/: ChatCompletionHandler.kt  EmbeddingsHandler.kt  ModelsHandler.kt
gateway/src/main/kotlin/com/tactorder/gateway/application/: ChatService.kt
gateway/src/main/kotlin/com/tactorder/gateway/client/: InferenceClient.kt
gateway/src/main/kotlin/com/tactorder/gateway/domain/model/: DomainModels.kt  NodeConfig.kt
gateway/src/main/kotlin/com/tactorder/gateway/domain/port/: InferenceService.kt
gateway/src/main/kotlin/com/tactorder/gateway/infrastructure/grpc/: GrpcInferenceService.kt
gateway/src/main/kotlin/com/tactorder/gateway/infrastructure/mnn/: MnnJniService.kt  NativeEngineWrapper.kt
gateway/src/main/kotlin/com/tactorder/gateway/model/: OpenAIModels.kt
gateway/src/main/kotlin/com/tactorder/gateway/native/: NativeEngine.kt
gateway/src/main/kotlin/com/tactorder/gateway/router/: Router.kt  RouterAi.kt
gateway/src/main/kotlin/com/tactorder/gateway/verticles/: ChatVerticle.kt  EmbeddingsVerticle.kt
inference-services/common/: CMakeLists.txt
inference-services/common/include/tactorder/inference/: grpc_stream_buf.h  server_base.h  tokenizer.hpp
inference-services/common/src/: server_base.cpp  test_tokenizer.cpp  tokenizer.cpp
inference-services/mnn-service/: .env.example  CMakeLists.txt  CMakePresets.json  FindOpenSSL.cmake  OpenSSL-release-x86_64-data.cmake  OpenSSLConfig.cmake  ZLIB-release-x86_64-data.cmake  absl-release-x86_64-data.cmake  c-ares-release-x86_64-data.cmake  conan_toolchain.cmake  conanbuild.sh  conanbuildenv-release-x86_64.sh  conandeps_legacy.cmake  conanfile.txt  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  gRPC-release-x86_64-data.cmake  module-OpenSSL-release-x86_64-data.cmake  module-Protobuf-release-x86_64-data.cmake  nlohmann_json-release-x86_64-data.cmake  protobuf-release-x86_64-data.cmake  re2-release-x86_64-data.cmake  service.pid  service_log.txt
inference-services/mnn-service/src/: main.cpp  mnn_bridge.cpp  service_impl.cpp  service_impl.h
inference-services/onnx-service/: CMakeLists.txt  conanfile.txt
inference-services/onnx-service/src/: main.cpp  onnx_service_impl.cpp  onnx_service_impl.h
inference-services/python-onnx-service/: requirements.txt  server.py
proto/: inference.proto
pycompare/: test_gateway_nodes.py  test_gliner_perf.py  test_llm_perf.py  test_nuextract_perf.py
scripts/: convert_gliner_to_mnn.sh  download_models.sh  export_gliner.py
testsuite/: stress_test.sh  test_concurrency_and_health.py  test_gateway_client.py  test_gateway_jni.py  test_integration.sh  test_onnx_client.py
tools/: export_tokenizer.py  inspect_onnx.py  test_chat_completion.py  test_list_models.py
